RESOLVED FIXED133196
Can't type in status in facebook.com on iOS Safari because keyboard disappears
https://bugs.webkit.org/show_bug.cgi?id=133196
Summary Can't type in status in facebook.com on iOS Safari because keyboard disappears
Ryosuke Niwa
Reported 2014-05-22 17:58:11 PDT
With the latest WebKit, we can't type in status on facebook.com because the keyboard disappears as you tap on "Update Status".
Attachments
Patch (8.29 KB, patch)
2014-05-22 18:05 PDT, Ryosuke Niwa
no flags
Patch for landing (8.34 KB, patch)
2014-05-22 20:27 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2014-05-22 18:05:27 PDT
Geoffrey Garen
Comment 2 2014-05-22 18:59:49 PDT
Comment on attachment 231927 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=231927&action=review r=me > Source/WebCore/ChangeLog:8 > + When the user taps on the status on facebook.com, the page focuses an textarea, "a" > Source/WebCore/ChangeLog:9 > + which is then made momentarily visible by setting display:none. "invisible"?
Ryosuke Niwa
Comment 3 2014-05-22 20:27:24 PDT
Created attachment 231936 [details] Patch for landing
WebKit Commit Bot
Comment 4 2014-05-22 21:06:35 PDT
Comment on attachment 231936 [details] Patch for landing Clearing flags on attachment: 231936 Committed r169244: <http://trac.webkit.org/changeset/169244>
WebKit Commit Bot
Comment 5 2014-05-22 21:06:40 PDT
All reviewed patches have been landed. Closing bug.
Arunprasad
Comment 6 2014-05-22 22:05:29 PDT
Actually bug 29241 is almost same like https://chromium.googlesource.com/chromium/blink/+/c58f636fd18fc27944c42e27d6a92a36867c57e1. Is it happening on Chrome also?(I mean Chrome for Android/iOS?)
Ryosuke Niwa
Comment 7 2014-05-23 00:35:12 PDT
(In reply to comment #6) > Actually bug 29241 is almost same like https://chromium.googlesource.com/chromium/blink/+/c58f636fd18fc27944c42e27d6a92a36867c57e1. > > Is it happening on Chrome also?(I mean Chrome for Android/iOS?) I don't know. But that's somewhat irrelevant because the content served to Android/Chrome might be different from the one served to iOS/Safari. As I see it, the specification is incompatible with the Web today.
Note You need to log in before you can comment on or make changes to this bug.